--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.8.4",
-    "serverless-http": "^3.1.1"
+    "mongoose": "^6.8.4"
   }
 }
