--- a/.github/workflows/main_musicandapi.yml
+++ b/.github/workflows/main_musicandapi.yml
@@ -24,7 +24,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build && mv ./build/* ./dist --if-present
+          npm run build && mv ./build/* ./dist
           npm run test --if-present
       
       - name: Upload artifact for deployment job
